Avoid overlapping admin bar on widget area on mobile

--- a/src/public/sidebar/widget-area/index.css
+++ b/src/public/sidebar/widget-area/index.css
@@ -27,6 +27,7 @@
 
 		.admin-bar & {
 			@extend %is-admin-bar;
+			z-index: 99999;
 		}
 
 		.has-sidebar--open & {
